update code report